--- a/templates/actors/parts/capacities/encounter-capacities.hbs
+++ b/templates/actors/parts/capacities/encounter-capacities.hbs
@@ -1,34 +1,40 @@
-{{#if (gt capacities.length 0)}}
-<ol class="inventory-list">
-     <li class="inventory-header flexrow">
-            <h3 class="item-name flexrow">Capacités</h3>
-            <div class="item-detail">L</div>
-            <div class="item-detail">S</div>
-            <div class="item-controls">
-            <a class="item-control item-create capacity-add" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp;</a>
-        </div>
-    </li>
-    {{#each capacities as |capacity id|}}
-        <li class="item flexrow" data-item-id="{{capacity._id}}" data-item-type="item" draggable="true">
-            <div class="item-name flexrow">
-                <div class="item-image" style="background-image: url('{{capacity.img}}')"></div>
-                <h4>{{capacity.name}}</h4>
-            </div>
-            <div class="item-detail">{{#if capacity.data.rank}}{{capacity.data.rank}}{{/if}}</div>
-            <div class="item-detail">{{#if capacity.data.limited}}L{{/if}}</div>
-            <div class="item-detail">{{#if capacity.data.spell}}&#10033;{{/if}}</div>
-            <div class="item-controls">
-                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-            </div>
-            <div class="item-summary" style="display: none">
-                {{{capacity.data.description}}}
-                <div class="item-properties">
-                    {{#if capacity.data.spell}}<span class="tag">{{localize "COC.ui.spell"}}</span>{{/if}}
-                    {{#if capacity.data.limited}}<span class="tag">{{localize "COC.ui.limited"}}</span>{{/if}}
+{{#if (equals capacities.length 0)}}
+    <p class="empty">{{localize "COC.notification.noCapacitySelected"}}</p>
+{{else}}
+    <ol class="inventory-list">
+        <li class="inventory-header flexrow">
+                <h3 class="item-name flexrow">Capacités</h3>
+                <div class="item-detail">L</div>
+                <div class="item-detail">S</div>
+                <div class="item-controls">
+                    <a class="item-control item-create capacity-add" title="Ajouter une capacité"><i class="fas fa-plus"></i>&nbsp;</a>
                 </div>
-            </div>
         </li>
-    {{/each}}
-</ol>
+        <ol class="item-list">
+        {{#each capacities as |capacity id|}}
+            <li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
+                <div class="item-name flexrow">
+                    <div class="item-image" style="background-image: url('{{img}}')"></div>
+                    <h4>{{name}}</h4>
+                </div>
+                {{#with capacity}}
+                    <div class="item-detail">{{#if data.rank}}{{data.rank}}{{/if}}</div>
+                    <div class="item-detail">{{#if data.limited}}L{{/if}}</div>
+                    <div class="item-detail">{{#if data.spell}}&#10033;{{/if}}</div>
+                    <div class="item-controls">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                    </div>
+                    <div class="item-summary" style="display: none">
+                        {{{data.description}}}
+                        <div class="item-properties">
+                            {{#if data.spell}}<span class="tag">{{localize "COC.ui.spell"}}</span>{{/if}}
+                            {{#if data.limited}}<span class="tag">{{localize "COC.ui.limited"}}</span>{{/if}}
+                        </div>
+                    </div>
+                {{/with}}
+            </li>
+        {{/each}}
+        </ol>
+    </ol>
 {{/if}}
