--- a/templates/actors/parts/combat/encounter-combat.hbs
+++ b/templates/actors/parts/combat/encounter-combat.hbs
@@ -1,39 +1,41 @@
-{{#if (gt weapons.length 0)}}
-<ol class="inventory-list">
-    <li class="inventory-header flexrow">
-        <h3 class="item-name flexrow">Attaques</h3>
-        <div class="item-detail">Portée</div>
-        <div class="item-detail">Critique</div>        
-        <div class="item-detail">Mod</div>
-        <div class="item-detail">DM</div>
-        <div class="item-controls-3">
-            <a class="item-control item-create weapon-add" title="Ajouter une attaque"><i class="fas fa-plus"></i>&nbsp;</a>
-        </div>
-    </li>
-    <ol class="item-list">
-    {{#each weapons as |weapon id|}}
-        <li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
-            <div class="item-name flexrow">
-                <div class="item-image" style="background-image: url('{{img}}')"></div>
-                <h4>{{name}}</h4>
-            </div>
-            {{#with data.weapon as |weapon|}}
-                <div class="item-detail">{{range}}</div>
-                <div class="item-detail">{{critrange}}</div>                
-                <div class="item-detail">{{numberFormat modTotal decimals=0 sign=true}}</div>
-                <div class="item-detail">{{dmgTotal}}</div>            
-                <div class="item-controls-3">
-                    <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                    <a class="item-control rollable" data-roll-type="encounter-weapon"><i class="fas fa-dice-d20"></i></a>
-                    <a class="item-control rollable" data-roll-type="encounter-damage"><i class="fas fa-dice"></i></a>
-                    <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                </div>
-            {{/with}}
-            <div class="item-summary" style="display: none">
-                {{{data.description}}}
+{{#if (equals weapons.length 0)}}
+    <p class="empty">{{localize "COC.notification.noEncounterWeaponsSelected"}}</p>
+{{else}}
+    <ol class="inventory-list">
+        <li class="inventory-header flexrow">
+            <h3 class="item-name flexrow">Attaques</h3>
+            <div class="item-detail">Portée</div>
+            <div class="item-detail">Critique</div>        
+            <div class="item-detail">Mod</div>
+            <div class="item-detail">DM</div>
+            <div class="item-controls-3">
+                <a class="item-control item-create weapon-add" title="Ajouter une attaque"><i class="fas fa-plus"></i>&nbsp;</a>
             </div>
         </li>
-    {{/each}}
+        <ol class="item-list">
+        {{#each weapons as |weapon id|}}
+            <li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
+                <div class="item-name flexrow">
+                    <div class="item-image" style="background-image: url('{{img}}')"></div>
+                    <h4>{{name}}</h4>
+                </div>
+                {{#with data.weapon as |weapon|}}
+                    <div class="item-detail">{{range}}</div>
+                    <div class="item-detail">{{critrange}}</div>                
+                    <div class="item-detail">{{numberFormat modTotal decimals=0 sign=true}}</div>
+                    <div class="item-detail">{{dmgTotal}}</div>            
+                    <div class="item-controls-3">
+                        <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                        <a class="item-control rollable" data-roll-type="encounter-weapon"><i class="fas fa-dice-d20"></i></a>
+                        <a class="item-control rollable" data-roll-type="encounter-damage"><i class="fas fa-dice"></i></a>
+                        <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                    </div>
+                {{/with}}
+                <div class="item-summary" style="display: none">
+                    {{{data.description}}}
+                </div>
+            </li>
+        {{/each}}
+        </ol>
     </ol>
-</ol>
 {{/if}}
