--- a/templates/actors/parts/combat/encounter-combat.hbs
+++ b/templates/actors/parts/combat/encounter-combat.hbs
@@ -17,13 +17,13 @@
             <li class="item flexrow" data-item-id="{{_id}}" data-item-type="item" draggable="true">
                 <div class="item-name flexrow">
                     <div class="item-image encounter-attack-icon" style="background-image: url('{{img}}')"></div>
-                    <h4>{{name}}</h4>
+                    <h4 class="weapon-name">{{name}}</h4>
                 </div>
                 {{#with data.weapon as |weapon|}}
                     <div class="item-detail">{{range}}</div>
-                    <div class="item-detail">{{critrange}}</div>                
-                    <div class="item-detail">{{numberFormat modTotal decimals=0 sign=true}}</div>
-                    <div class="item-detail">{{dmgTotal}}</div>            
+                    <div class="item-detail weapon-crit">{{critrange}}</div>                
+                    <div class="item-detail weapon-mod">{{numberFormat modTotal decimals=0 sign=true}}</div>
+                    <div class="item-detail weapon-dmg">{{dmgTotal}}</div>            
                     <div class="item-controls-3">
                         <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
                         <a class="item-control rollable" data-roll-type="encounter-weapon"><i class="fas fa-dice-d20"></i></a>
