--- a/templates/chat/healing-roll-card.hbs
+++ b/templates/chat/healing-roll-card.hbs
@@ -7,12 +7,14 @@
     <div class="flex1 no-wrap">
         <h3><strong>{{label}}</strong></h3>
     </div>
-    <div class="flex1 right no-wrap">
-        <a class="btn apply-dmg" data-apply="full">
-            <i class="fas fa-user-minus" title="{{localize "COC.ui.applyDamage"}}"></i>
-        </a>
-        <a class="btn apply-dmg" data-apply="heal">
-            <i class="fas fa-user-plus" title="{{localize "COC.ui.applyHealing"}}"></i>
-        </a>
-    </div>
+    {{#if showButtons}}
+        <div class="flex1 right no-wrap">
+            <a class="btn apply-dmg" data-apply="full">
+                <i class="fas fa-user-minus" title="{{localize "COC.ui.applyDamage"}}"></i>
+            </a>
+            <a class="btn apply-dmg" data-apply="heal">
+                <i class="fas fa-user-plus" title="{{localize "COC.ui.applyHealing"}}"></i>
+            </a>
+        </div>
+    {{/if}}
 </div>
